--- a/TechnicalTest/TechnicalTest.xcodeproj/xcshareddata/xcschemes/TechnicalTest.xcscheme
+++ b/TechnicalTest/TechnicalTest.xcodeproj/xcshareddata/xcschemes/TechnicalTest.xcscheme
@@ -76,7 +76,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-mock"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
